# libfork

./: .buildinfo  .clang-format  .clang-tidy  .clangd  .cmake-format  .codespellrc  .gitignore  AGENTS.md  BUILDING.md  Brewfile  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  ChangeLog.md  HACKING.md  README.md  TODO.md  api.html  conanfile.py  diverging_file.txt  dummy_file.txt  genindex.html  gmon.out  index.html  main.cxx  main.py  meson.build  meson_options.txt  objects.inv  pyproject.toml  search.html  searchindex.js  todo.md  tour.md  uses_std.cxx  vcpkg.json  zensical.toml
bench/: CMakeLists.txt  README.md  memory.py  memory_plot.py  memory_plot_all.py  memory_plot_uts.py  memory_run.py  plot.py  plot_all.py  plot_alloc.py  plot_uts.py  requirements.txt
bench/basic/: f40.json  memory.T3L.csv  plot.py  plt_mem.py
bench/coro/: incremental.cpp
bench/data/: lovlace.json
bench/data/graviton/: arm-fork-matmul-n=1024.json
bench/data/laptop/: matmul.json
bench/source/: calibrate.cpp  util.hpp
bench/source/coroutine/: incremental.cpp
bench/source/fib/: ccpp.cpp  config.hpp  libfork.cpp  nowa.cpp  omp.cpp  serial.cpp  taskflow.cpp  tbb.cpp
bench/source/fold/: config.hpp  libfork.cpp  serial.cpp
bench/source/integrate/: config.hpp  libfork.cpp  omp.cpp  serial.cpp  taskflow.cpp  tbb.cpp  tmc.cpp
bench/source/matmul/: config.hpp  libfork.cpp  omp.cpp  serial.cpp  taskflow.cpp  tbb.cpp
bench/source/nqueens/: config.hpp  libfork.cpp  omp.cpp  serial.cpp  taskflow.cpp  tbb.cpp
bench/source/primes/: config.hpp  libfork.cpp  serial.cpp  taskflow.cpp
bench/source/reduce/: config.hpp  libfork.cpp  omp.cpp  serial.cpp  taskflow.cpp  tbb.cpp
bench/source/scan/: config.hpp  lf2.cpp  lf3.cpp  lf4.cpp  libfork.cpp  serial.cpp  tbb.cpp
bench/source/uts/: ccpp.cpp  config.hpp  libfork.cpp  omp.cpp  serial.cpp  taskflow.cpp  tbb.cpp  tmc.cpp
benchmark/: CMakeLists.txt  README.md  bench.cmake  bench.hpp  bench.sh  ci.yml  omp.cpp  plot.py  plot_arm.py
benchmark/data/: arm-fork-dfs-7,7.json  arm-fork-fib-30.json  arm-fork-reduce-100_000_000.json  fork-dfs-7,7.json  fork-fib-30.json  fork-matmul-n=1024.json  fork-reduce-100_000_000.json  omp-dfs-7,7.json  omp-fib-30.json  omp-matmul-n=1024.json  omp-reduce-100_000_000.json  serial-dfs-7,7.json  serial-fib-30.json  serial-matmul-n=1024.json  serial-reduce-100_000_000.json  tbb-dfs-7,7.json  tbb-fib-30.json  tbb-reduce-100_000_000.json
benchmark/lib/: CMakeLists.txt  bench.hpp  cholesky.hpp  common.hpp  fft.hpp  fib.hpp  fold.hpp  heat.hpp  integrate.hpp  knapsack.hpp  lu.hpp  macros.hpp  mandelbrot.hpp  matmul.hpp  matrix.hpp  mergesort.hpp  nqueens.hpp  primes.hpp  quadrature_integrate.hpp  quicksort.hpp  rectmul.hpp  scan.hpp  skynet.hpp  strassen.hpp  transpose.hpp  uts.cpp  uts.hpp  winograd.hpp
benchmark/libfork/: CMakeLists.txt  dfs.cpp  fib.cpp  matmul.cpp  reduce.cpp
benchmark/omp/: CMakeLists.txt  dfs.cpp  fib.cpp  matmul.cpp  reduce.cpp
benchmark/overhead/: CMakeLists.txt  overhead.cpp
benchmark/serial/: CMakeLists.txt  dfs.cpp  fib.cpp  matmul.cpp  reduce.cpp
benchmark/source/: example.cpp  fib.cpp  main.cpp  reduce.cpp
benchmark/source/dfs/: dfs.cpp  omp.cpp
benchmark/source/fib/: fib.cpp
benchmark/source/matmul/: common.hpp  openmp.cpp
benchmark/src/: benchmarks.cpp  fib.cpp
benchmark/src/baremetal/: CMakeLists.txt  fib.cpp
benchmark/src/lib/: CMakeLists.txt  uts.hpp
benchmark/src/libfork/: CMakeLists.txt  cholesky.cpp  fft.cpp  fib.cpp  fib_omp.cpp  fold.cpp  for_each.cpp  heat.cpp  helpers.hpp  integrate.cpp  knapsack.cpp  lu.cpp  mandelbrot.cpp  matmul.cpp  mergesort.cpp  nqueens.cpp  primes.cpp  quadrature_integrate.cpp  quicksort.cpp  rectmul.cpp  skynet.cpp  strassen.cpp  switch_io_pool.cpp  switch_random.cpp  transpose.cpp  uts.cpp  winograd.cpp
benchmark/src/libfork_benchmark/: common.hpp
benchmark/src/openmp/: CMakeLists.txt  fib.cpp  uts.cpp  uts_omp.cpp
benchmark/src/serial/: CMakeLists.txt  cholesky.cpp  fft.cpp  fib.cpp  fold.cpp  heat.cpp  integrate.cpp  knapsack.cpp  lu.cpp  mandelbrot.cpp  matmul.cpp  mergesort.cpp  nqueens.cpp  primes.cpp  quadrature_integrate.cpp  quicksort.cpp  rectmul.cpp  scan.cpp  skynet.cpp  strassen.cpp  transpose.cpp  uts.cpp  winograd.cpp
benchmark/tbb/: CMakeLists.txt  dfs.cpp  fib.cpp  matmul.cpp  reduce.cpp
nowa_ref/: Makefile.am  cholesky.c  fft.c  fft.h  fib.c  heat.c  integrate.c  knapsack.c  lu.c  matmul.c  nqueens.c  quicksort.c  rectmul.c  strassen.c  test.h
test/: CMakeLists.txt  bench.cpp  fib.cpp  main.cpp  main.cxx  main_test.cpp  meson.build  nqueens.cpp
test/glob/: allocator.cpp  basic_task.cpp  busy_pool.cpp  catch.cpp  event_count.cpp  forkpool.cpp  queue.cpp  result.cpp  task.cpp  thread_pool.cpp  utility.cpp  wsq.cpp
test/single/: halo.cpp
test/source/: Forkpool_test.cpp  algorithm.cpp  basic_promise.cpp  basic_task.cpp  buffered_queue.old  busy_pool.cpp  catch.cpp  core.cpp  core.old  event_count.cpp  eventually.cpp  exception.cpp  forkpool.cpp  forkpool_test.cpp  hwloc.cpp  libfork.cpp  libfork_test.cpp  macro.cpp  meta_test.cpp  numa.cpp  queue.cpp  result.cpp  single_header.cpp  stack.cpp  task.cpp  test_stack.cpp  utility.cpp  wsq.cpp
test/source/algorithm/: fold.cpp  for_each.cpp  map.cpp  matrix.hpp  play.cpp  scan.cpp
test/source/core/: bad_behavior.cpp  basic_promise.cpp  bench_core.cpp  core.cpp  deque.cpp  eventually.cpp  exceptions.cpp  exp.cpp  explicit.cpp  extern.hpp  extern_test.cpp  just.cpp  lazy_pool.cpp  result.cpp  stack.cpp  true_core.cpp  unbalanced.cpp  wsq.cpp
test/source/schedule/: deque.cpp  event_count.cpp  queue.cpp  ring_buffer.cpp  (+1 more)
test/src/: adaptors.cpp  cancel.cpp  cancel_fuzz.cpp  concepts.cpp  deque.cpp  explicit_scheduling.cpp  fold.cpp  for_each.cpp  lift.cpp  main.cpp  projected.cpp  promise.cpp  schedule.cpp  stack.cpp  test_config_files.cpp  test_constexpr.cpp  test_ev.cpp  test_stack.cpp  tuple.cpp  utility.cpp  version.cpp  zip.cpp
tools/: CMakeLists.txt  deps.py  iwyu.sh  make_single_header.cpp
(+619 files in other folders)
